Added support for media content objects

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Partials\InformationSourceCollection.cs" />
     <Compile Include="Partials\Location.cs" />
     <Compile Include="Partials\MapMarker.cs" />
+    <Compile Include="Partials\MediaContent.cs" />
     <Compile Include="Partials\TBLoginInfo.cs" />
     <Compile Include="Partials\TBLoginRoot.cs" />
     <Compile Include="Partials\TBPRegisterEmail.cs" />
