Authentication management moved to self-encrypted cookies

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -56,7 +56,9 @@
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\OIPBallInstance.designer.cs">
       <Link>Abstractions\OIPBallInstance.designer.cs</Link>
     </Compile>
+    <Compile Include="AuthenticationSupport.cs" />
     <Compile Include="EmailSupport.cs" />
+    <Compile Include="EncryptionSupport.cs" />
     <Compile Include="ErrorItem.cs" />
     <Compile Include="ErrorSupport.cs" />
     <Compile Include="FileSystemSupport.cs" />
