--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -12,6 +12,11 @@
       <section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true" />
     </sectionGroup>
   </configSections>
+  <!--
+  <appSettings>
+    <add key="DefaultProviderApplicationName" value="TheBall"/>
+  </appSettings>
+  -->
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
     <customErrors mode="Off" />
@@ -20,6 +25,18 @@
     </authentication>
     <authorization>
     </authorization>
+    <sessionState mode="Off" />
+    <!-- SessionState Provider Configuration -->
+    <!--
+    <sessionState mode="Custom"
+                  customProvider="TableStorageSessionStateProvider">
+      <providers>
+        <clear/>
+        <add name="TableStorageSessionStateProvider"
+             type="Microsoft.Samples.ServiceHosting.AspProviders.TableStorageSessionStateProvider" />
+      </providers>
+    </sessionState>
+    -->
   </system.web>
   <location path="public">
     <system.web>
