- Request validation bypass allowed
- Required to constrain it to only richtext editor fields (and validate those as separate)

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -26,6 +26,9 @@
     <authorization>
     </authorization>
     <sessionState mode="Off" />
+    <!--
+    <httpRuntime requestValidationMode="2.0" />
+    -->
     <!-- SessionState Provider Configuration -->
     <!--
     <sessionState mode="Custom"
