Updated group invite + confirm joining through email validation

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Partials\MapMarker.cs" />
     <Compile Include="Partials\MediaContent.cs" />
     <Compile Include="Partials\ReferenceToInformation.cs" />
+    <Compile Include="Partials\TBCollaboratorRole.cs" />
     <Compile Include="Partials\TBLoginInfo.cs" />
     <Compile Include="Partials\TBLoginRoot.cs" />
     <Compile Include="Partials\TBPRegisterEmail.cs" />
