--- a/Abstractions/AbstractionContent/AbstractionContent.csproj
+++ b/Abstractions/AbstractionContent/AbstractionContent.csproj
@@ -49,7 +49,6 @@
     <Content Include="ObjectRelational\In\Content_v1_0\CaloomDatabase_v1_0.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="TheBallCore\In\Content_v1_0\OIPBallInstance.xml" />
     <None Include="ServiceLayer\Out\ServiceClient_CSharp_v1_0.designer.cs" />
     <None Include="ServiceLayer\Out\ServiceContract_CSharp_v1_0.designer.cs" />
     <None Include="ServiceLayer\Out\ServiceServer_CSharp_v1_0.designer.cs" />
@@ -65,6 +64,7 @@
     <Folder Include="ClassModel\Out\" />
     <Folder Include="Operation\In\" />
     <Folder Include="Operation\Out\" />
+    <Folder Include="TheBallCore\In\Content_v1_0\" />
     <Folder Include="TheBallCore\Out\" />
   </ItemGroup>
   <ItemGroup>
