--- a/Tools/TheBallTool/TheBallTool.csproj
+++ b/Tools/TheBallTool/TheBallTool.csproj
@@ -60,7 +60,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>copy "$(SolutionDir)Apps\WorkerTemplate\CaloomUI\caloomxml\OIPBallInstance.xml" "$(SolutionDir)Abstractions\AbstractionContent\TheBallCore\In\Content_v1_0\"</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
