Migrating existing content to collections non-destructively

--- a/Abstractions/AbstractionContent/AbstractionContent.csproj
+++ b/Abstractions/AbstractionContent/AbstractionContent.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Content Include="..\..\Apps\WorkerTemplate\CaloomUI\caloomxml\OIPBallInstance.xml">
       <Link>TheBallCore\OIPBallInstance.xml</Link>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="ClassModel\In\ClassModelFromCaloomStdUI.xml">
       <SubType>Designer</SubType>
