ImageGroup support being added, data patcher separated, parametrization of tool started

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -64,24 +64,30 @@
     <Compile Include="ErrorSupport.cs" />
     <Compile Include="FileSystemSupport.cs" />
     <Compile Include="IAdditionalFormatProvider.cs" />
+    <Compile Include="IBeforeStoreHandler.cs" />
     <Compile Include="IContainerOwner.cs" />
     <Compile Include="InformationContext.cs" />
     <Compile Include="InformationSourceSupport.cs" />
     <Compile Include="IPublisher.cs" />
     <Compile Include="Operation\UpdatePageContentImplementation.cs" />
     <Compile Include="Partials\AccountContainer.cs" />
+    <Compile Include="Partials\Activity.cs" />
     <Compile Include="Partials\ActivitySummaryContainer.cs" />
     <Compile Include="Partials\AddActivityInfo.cs" />
     <Compile Include="Partials\AddBlogPostInfo.cs" />
     <Compile Include="Partials\AddEmailAddressInfo.cs" />
     <Compile Include="Partials\AddAddressAndLocationInfo.cs" />
+    <Compile Include="Partials\AddressAndLocation.cs" />
     <Compile Include="Partials\Blog.cs" />
     <Compile Include="Partials\BlogContainer.cs" />
+    <Compile Include="Partials\CollectionUpdateImplementation.cs" />
     <Compile Include="Partials\CreateGroupInfo.cs" />
     <Compile Include="DefaultViewSupport.cs" />
     <Compile Include="Partials\ExtIInformationObject.cs" />
     <Compile Include="Partials\GroupContainer.cs" />
     <Compile Include="Partials\IAddOperationProvider.cs" />
+    <Compile Include="Partials\Image.cs" />
+    <Compile Include="Partials\ImageGroup.cs" />
     <Compile Include="Partials\InformationSource.cs" />
     <Compile Include="Partials\InformationSourceCollection.cs" />
     <Compile Include="Partials\Location.cs" />
