Sync tests / from public container www-public (temporarily from oip-public)

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -74,7 +74,10 @@
       </files>
     </defaultDocument>
     <handlers>
-      <add name="AnonymousBlobStorageHandler" path="public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AnonymousBlobStorageHandlerWww" path="www-public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AnonymousBlobStorageHandlerAssets" path="oip-additions/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AnonymousBlobStorageHandlerBootstrap" path="bootstrap-default/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AnonymousBlobStorageHandlerGrp" path="public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
       <add name="AuthorizedBlobStorageHandler" path="auth/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
       <add name="EmailValidationHandler" path="emailvalidation/*" verb="*" type="WebInterface.EmailValidationHandler" resourceType="Unspecified" />
     </handlers>
