Added separate login and registration support for authenticated site.

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -21,7 +21,7 @@
     <compilation debug="true" targetFramework="4.0" />
     <customErrors mode="Off" />
     <authentication mode="Forms">
-      <forms loginUrl="public/grp/default/publicsite/oip-public/oip-layout-register.phtml" timeout="2880" defaultUrl="auth/account/website/oip-account/oip-layout-account-welcome.phtml" />
+      <forms loginUrl="/about/oip-public/oip-layout-register.phtml" timeout="2880" defaultUrl="/auth/account/website/oip-account/oip-layout-account-welcome.phtml" />
     </authentication>
     <authorization>
     </authorization>
@@ -41,7 +41,7 @@
     </sessionState>
     -->
   </system.web>
-  <location path="public">
+  <location path="grp">
     <system.web>
       <authorization>
         <allow users="*"/>
@@ -74,12 +74,14 @@
       </files>
     </defaultDocument>
     <handlers>
-      <add name="AnonymousBlobStorageHandlerWww" path="www-public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
-      <add name="AnonymousBlobStorageHandlerAssets" path="oip-additions/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
-      <add name="AnonymousBlobStorageHandlerBootstrap" path="bootstrap-default/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
-      <add name="AnonymousBlobStorageHandlerGrp" path="public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
-      <add name="AuthorizedBlobStorageHandler" path="auth/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
-      <add name="EmailValidationHandler" path="emailvalidation/*" verb="*" type="WebInterface.EmailValidationHandler" resourceType="Unspecified" />
+      <add name="AnonymousBlobStorageHandlerWww" path="/www-public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AnonymousBlobStorageHandlerAssets" path="/oip-additions/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AnonymousBlobStorageHandlerBootstrap" path="/bootstrap-default/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AnonymousBlobStorageHandlerGrp" path="/grp/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AnonymousBlobStorageHandlerPublic" path="/public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AuthorizedBlobStorageHandlerAbout" path="/about/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AuthorizedBlobStorageHandlerAuth" path="/auth/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
+      <add name="EmailValidationHandler" path="/emailvalidation/*" verb="*" type="WebInterface.EmailValidationHandler" resourceType="Unspecified" />
     </handlers>
   </system.webServer>
   <system.net>
