--- a/Apps/WebInterface/WebInterface.csproj
+++ b/Apps/WebInterface/WebInterface.csproj
@@ -131,7 +131,7 @@
     <None Include="Properties\PublishProfiles\theball - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\theball - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\Web Role OIPSSL.pubxml" />
-    <None Include="Properties\PublishProfiles\Web Role Publish.pubxml" />
+    <None Include="Properties\PublishProfiles\oip.msunit.citrus.fi.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AzureSupport\AzureSupport.csproj">
