--- a/Tools/TheBallTool/Properties/Settings.settings
+++ b/Tools/TheBallTool/Properties/Settings.settings
@@ -2,8 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TheBallTool.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="Setting" Type="System.String" Scope="Application">
-      <Value Profile="(Default)" />
+    <Setting Name="CurrentActiveContainerName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">demooip-aaltoglobalimpact-org</Value>
     </Setting>
   </Settings>
 </SettingsFile>
