--- a/Tools/TheBallTool/app.config
+++ b/Tools/TheBallTool/app.config
@@ -8,8 +8,8 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
     <applicationSettings>
         <TheBallTool.Properties.Settings>
-            <setting name="Setting" serializeAs="String">
-                <value />
+            <setting name="CurrentActiveContainerName" serializeAs="String">
+                <value>demooip-aaltoglobalimpact-org</value>
             </setting>
         </TheBallTool.Properties.Settings>
     </applicationSettings>
