--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -56,6 +56,7 @@
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\OIPBallInstance.designer.cs">
       <Link>Abstractions\OIPBallInstance.designer.cs</Link>
     </Compile>
+    <Compile Include="Operation\PerformWebActionImplementation.cs" />
     <Compile Include="Operation\RemoveMemberFromGroupImplementation.cs" />
     <Compile Include="Operation\RefreshAccountGroupMembershipsImplementation.cs" />
     <Compile Include="Operation\ConfirmInviteToJoinGroupImplementation.cs" />
