Added operations to publish group public content and www content

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -56,6 +56,8 @@
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\OIPBallInstance.designer.cs">
       <Link>Abstractions\OIPBallInstance.designer.cs</Link>
     </Compile>
+    <Compile Include="Operation\PublishGroupContentToPublicAreaImplementation.cs" />
+    <Compile Include="Operation\PublishGroupContentToWwwImplementation.cs" />
     <Compile Include="Operation\PerformWebActionImplementation.cs" />
     <Compile Include="Operation\RemoveMemberFromGroupImplementation.cs" />
     <Compile Include="Operation\RefreshAccountGroupMembershipsImplementation.cs" />
