--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -81,6 +81,7 @@
     <Compile Include="InformationSourceSupport.cs" />
     <Compile Include="IPublisher.cs" />
     <Compile Include="Operation\UpdatePageContentImplementation.cs" />
+    <Compile Include="OwnerSubscriptionItem.cs" />
     <Compile Include="Partials\AccountContainer.cs" />
     <Compile Include="Partials\Activity.cs" />
     <Compile Include="Partials\ActivitySummaryContainer.cs" />
@@ -107,6 +108,7 @@
     <Compile Include="Partials\MapMarker.cs" />
     <Compile Include="Partials\MediaContent.cs" />
     <Compile Include="Partials\ReferenceToInformation.cs" />
+    <Compile Include="Partials\SubscriptionChainRequestContent.cs" />
     <Compile Include="Partials\TBCollaboratorRole.cs" />
     <Compile Include="Partials\TBLoginInfo.cs" />
     <Compile Include="Partials\TBLoginRoot.cs" />
@@ -122,6 +124,7 @@
     <Compile Include="StackContextItem.cs" />
     <Compile Include="StorageSupport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubcriptionGraphItem.cs" />
     <Compile Include="SubscribeSupport.cs" />
     <Compile Include="Partials\TBAccount.cs" />
     <Compile Include="Partials\TBCollaboratingGroup.cs" />
