Developer on-the-fly rendering of HTML implemented (against cloud storage)

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -12,11 +12,12 @@
       <section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true" />
     </sectionGroup>
   </configSections>
-  <!--
+    <!--
   <appSettings>
     <add key="DefaultProviderApplicationName" value="TheBall"/>
   </appSettings>
-  -->
+    -->
+  <appSettings file="../../../OIPExternal.config" />
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
     <customErrors mode="Off" />
@@ -62,6 +63,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="dev">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
   <system.webServer>
     <!--
     <validation validateIntegratedModeConfiguration="false" />
@@ -74,6 +82,7 @@
       </files>
     </defaultDocument>
     <handlers>
+      <add name="DeveloperBlobStorageHandler" path="/dev/*" verb="*" type="WebInterface.DeveloperBlobStorageHandler" resourceType="Unspecified" />
       <add name="AnonymousBlobStorageHandlerWww" path="/www-public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
       <add name="AnonymousBlobStorageHandlerAssets" path="/oip-additions/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
       <add name="AnonymousBlobStorageHandlerBootstrap" path="/bootstrap-default/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
