Filtered collections implemented, group creation fixed, partial updates of group status fixed

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -56,6 +56,7 @@
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\OIPBallInstance.designer.cs">
       <Link>Abstractions\OIPBallInstance.designer.cs</Link>
     </Compile>
+    <Compile Include="Operation\CreateGroupImplementation.cs" />
     <Compile Include="Operation\UpdateAccountRootToReferencesImplementation.cs" />
     <Compile Include="Operation\UpdateAccountContainerFromAccountRootImplementation.cs" />
     <Compile Include="Operation\UnlinkEmailAddressImplementation.cs" />
