View rendering for different websites, preceding requirement for deletes for the views

--- a/Abstractions/AbstractionContent/AbstractionContent.csproj
+++ b/Abstractions/AbstractionContent/AbstractionContent.csproj
@@ -44,6 +44,9 @@
       <Link>TheBallCore\OIPBallInstance.xml</Link>
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="..\..\Apps\WorkerTemplate\CaloomUI\caloomxml\TheBallCore.xml">
+      <Link>TheBallCore\TheBallCore.xml</Link>
+    </Content>
     <Content Include="ClassModel\In\ClassModelFromCaloomStdUI.xml">
       <SubType>Designer</SubType>
     </Content>
