Resource monitoring sturage

--- a/Abstractions/AbstractionContent/AbstractionContent.csproj
+++ b/Abstractions/AbstractionContent/AbstractionContent.csproj
@@ -46,6 +46,7 @@
     </Content>
     <Content Include="..\..\Apps\WorkerTemplate\CaloomUI\caloomxml\TheBallCore.xml">
       <Link>TheBallCore\TheBallCore.xml</Link>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="ClassModel\In\ClassModelFromCaloomStdUI.xml">
       <SubType>Designer</SubType>
