Improved media handling

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -41,6 +41,7 @@
       </providers>
     </sessionState>
     -->
+    <httpRuntime maxRequestLength="512000"/>
   </system.web>
   <location path="grp">
     <system.web>
