Upgraded worker role to SDK 1.8, fixed public image locations

--- a/Apps/packages/repositories.config
+++ b/Apps/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\wa-accelerator-webroles\code\AzureMultiTenantApp.Web\packages.config" />
   <repository path="..\workerroleaccelerator\src\WorkerRoleAccelerator.Core\packages.config" />
 </repositories>
