--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -83,14 +83,14 @@
       </files>
     </defaultDocument>
     <handlers>
-      <add name="DeveloperBlobStorageHandler" path="/dev/*" verb="*" type="WebInterface.DeveloperBlobStorageHandler" resourceType="Unspecified" />
+      <add name="DeveloperBlobStorageHandler" path="/dev/*" verb="*" type="WebInterface.DeveloperBlobStorageHandler" resourceType="Unspecified" requireAccess="None" />
       <add name="AnonymousBlobStorageHandlerWww" path="/www-public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
       <add name="AnonymousBlobStorageHandlerWwwMedia" path="/AaltoGlobalImpact.OIP/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
       <add name="AnonymousBlobStorageHandlerAssets" path="/oip-additions/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
       <add name="AnonymousBlobStorageHandlerBootstrap" path="/bootstrap-default/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
       <add name="AnonymousBlobStorageHandlerGrp" path="/grp/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
       <add name="AnonymousBlobStorageHandlerPublic" path="/public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
-      <add name="AuthorizedBlobStorageHandlerAbout" path="/about/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AuthorizedBlobStorageHandlerAbout" path="/about/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" requireAccess="None" />
       <add name="AuthorizedBlobStorageHandlerAuth" path="/auth/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
       <add name="EmailValidationHandler" path="/emailvalidation/*" verb="*" type="WebInterface.EmailValidationHandler" resourceType="Unspecified" />
     </handlers>
