--- a/Apps/WebInterface/WebInterface.csproj
+++ b/Apps/WebInterface/WebInterface.csproj
@@ -143,6 +143,7 @@
     <None Include="Properties\PublishProfiles\Web Role OIPSSL.pubxml" />
     <None Include="Properties\PublishProfiles\oip.msunit.citrus.fi.pubxml" />
     <None Include="Properties\PublishProfiles\www.aaltoglobalimpact.org.pubxml" />
+    <None Include="Properties\PublishProfiles\www.globalimpact.aalto.fi.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AzureSupport\AzureSupport.csproj">
