Added assets as anonymous handler area

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -86,6 +86,7 @@
       <add name="DeveloperBlobStorageHandler" path="/dev/*" verb="*" type="WebInterface.DeveloperBlobStorageHandler" resourceType="Unspecified" requireAccess="None" />
       <add name="AnonymousBlobStorageHandlerWww" path="/www-public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
       <add name="AnonymousBlobStorageHandlerWwwMedia" path="/AaltoGlobalImpact.OIP/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AnonymousBlobStorageHandlerWwwAssets" path="/assets/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
       <add name="AnonymousBlobStorageHandlerAssets" path="/oip-additions/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
       <add name="AnonymousBlobStorageHandlerBootstrap" path="/bootstrap-default/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
       <add name="AnonymousBlobStorageHandlerGrp" path="/grp/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
